--- a/style.css
+++ b/style.css
@@ -3,20 +3,73 @@
 }
 
 body{
-background-image: url()
+background: url(img/ninbg.jpg)no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
-h1,
-h2, 
-h3, 
-h4, 
-h5, 
-h6 {
-  font-family: font-family: 'Press Start 2P', cursive;
+
+h1,h2, h3, h4, h5, h6 {
+  font-family: 'Press Start 2P', cursive;
+  color: #ffffff;
+  width:100%;
+  margin: auto;
 }
+h2{
+  margin-top: 20px;
+}
+
 nav{
   background-color: e4000f;
-  font-family: font-family: 'Press Start 2P', cursive;
+  font-family:'Press Start 2P', cursive;
 }
 p{
   font-family: 'Roboto', sans-serif;
+  color: #ffffff;
+  padding: 20px;
+}
+
+main{
+  padding: 5%;
+}
+main p{
+  margin-top: 20px;
+  margin-bottom: 20px
+}
+footer{
+  width: 80%;
+  margin: auto;
+}
+footer p{
+  display: inline-block;
+  margin: 5%;
+  }
+
+label{
+  color: lightgray;
+}
+img{
+  max-width: 80%;
+  height: auto;
+  margin: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.left{
+  display: inline;
+  float: left;
+  max-width: 45%;
+  margin-bottom: 10px;
+  margin-right: 10%;
+}
+.holder{
+  padding: 5px;
+  clear: both;
+}
+
+.jumbotron {
+  background-image: url("");
+  background-size: cover;
 }
