--- a/style.css
+++ b/style.css
@@ -57,6 +57,21 @@ img{
   padding-bottom: 20px;
 }
 
+input[type=submit]{
+  border: none;
+  padding: 5px 10px;
+  border-radius: 10px;
+  background-color: #ff9185;
+  margin-top: 15px;
+}
+
+.right{
+  display: inline;
+  float: right;
+  max-width: 45%;
+  margin-bottom: 10px;
+  margin-left: 10%;
+}
 .left{
   display: inline;
   float: left;
@@ -68,8 +83,12 @@ img{
   padding: 5px;
   clear: both;
 }
+.mario{
+  max-height: 70%;
+  width: auto;
+}
 
 .jumbotron {
-  background-image: url("");
-  background-size: cover;
+  background-image: url("https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F6%2F2020%2F03%2Fswitch-ecomm-2000.jpg");
+  background-size: contain;
 }
